[package]
name = "spellbook-near"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/00impera/spellbook-near"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=5.5.0"
borsh = "=1.5.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[patch.crates-io]
near-sdk = { git = "https://github.com/00impera/near-sdk-patched", branch = "master" }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked", "--no-abi"]
